# xsd2cpp

./: .gitignore  README.md
files/build_test/: CMakeLists.txt
files/build_test/include/: dc_xsd.h  dcmitype_xsd.h  dcterms_xsd.h  dml-chartDrawing_xsd.h  dml-chart_xsd.h  dml-diagram_xsd.h  dml-lockedCanvas_xsd.h  dml-mainExt_xsd.h  dml-main_xsd.h  dml-picture_xsd.h  dml-spreadsheetDrawing_xsd.h  dml-wordprocessingDrawing_xsd.h  hml_xsd.h  mc_xsd.h  opc-coreproperties_xsd.h  pml-2010_xsd.h  pml-2012_xsd.h  pml_xsd.h  shared-additionalCharacteristics_xsd.h  shared-bibliography_xsd.h  shared-commonSimpleTypes_xsd.h  shared-contentTypes_xsd.h  shared-customXmlDataProperties_xsd.h  shared-customXmlSchemaProperties_xsd.h  shared-documentPropertiesCustom_xsd.h  shared-documentPropertiesExtended_xsd.h  shared-documentPropertiesVariantTypes_xsd.h  shared-math_xsd.h  shared-relationshipReference_xsd.h  shared-relationships_xsd.h  sml_xsd.h  vml-main_xsd.h  vml-officeDrawing_xsd.h  vml-presentationDrawing_xsd.h  vml-spreadsheetDrawing_xsd.h  vml-wordprocessingDrawing_xsd.h  wml_xsd.h
files/build_test/src/: dc_xsd.cpp  dcmitype_xsd.cpp  dcterms_xsd.cpp  dml-chartDrawing_xsd.cpp  dml-chart_xsd.cpp  dml-diagram_xsd.cpp  dml-lockedCanvas_xsd.cpp  dml-mainExt_xsd.cpp  dml-main_xsd.cpp  dml-picture_xsd.cpp  dml-spreadsheetDrawing_xsd.cpp  dml-wordprocessingDrawing_xsd.cpp  hml_xsd.cpp  main.cpp  mc_xsd.cpp  opc-coreproperties_xsd.cpp  pml-2010_xsd.cpp  pml-2012_xsd.cpp  pml_xsd.cpp  shared-additionalCharacteristics_xsd.cpp  shared-bibliography_xsd.cpp  shared-commonSimpleTypes_xsd.cpp  (+16 more)
(+105 files in other folders)
